--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,7 +453,7 @@ input[name="r"]{
 }
 .information {
 	
-
+	background-color: #fff;
 	
 	box-shadow: 0px 12px 8px -1px rgba(0,0,0,0.25);
 	border-radius: 10px;
