--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,11 @@ body{
 
 .header {
 	position: relative;
-	z-index: 9999;
+	z-index: 10;
 	
 }
 
-
+/*
 @media screen and (max-width: 1170px) {
   .container {
       width: 100%;
@@ -67,8 +67,9 @@ body{
   }
 
 }
+*/
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 810px) {
 	.container {
       width: 100%;
       overflow: hidden;
@@ -232,15 +233,14 @@ body{
 	align-items: center;
 	justify-content: space-between;
 	position: relative;
+	text-align: center;
 }
+
 .down__menu__link {
-	
 	font-family: Roboto;
 	font-size: 16px;
 	font-weight: 100;
 	color: #000000;
-	white-space: nowrap;
-	padding: 21px 10px;
 	transition: background-color 0.5s ease 0s;
 }
 
@@ -258,9 +258,11 @@ body{
 
 
 .down__menu__list>li:hover .down__sub-menu__list{
+
 	display: block;
 	justify-content: space-between;
 }
+
 
 .sub-menu__link {
 	width: 100%;
@@ -276,10 +278,23 @@ body{
 
 }
 
+.down__menu__list>li{
+	padding: 0 10px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
 .sub-menu__link:hover{
 	background-color: #5feb6c;
 }
 
+.down__menu__list>li:hover {
+	background-color: #5feb6c;
+	
+}
+
+/*
 .down__menu__list>li:hover .down__menu__link{
 	background-color: #5feb6c;
 }
@@ -288,11 +303,8 @@ body{
 .down__menu__link:hover {
 	background-color: #5feb6c;
 }
-
+*/
 .search {
-	background-color: #aaa;
-
-
 }
 .search form{
 	width: auto;
@@ -360,20 +372,13 @@ body{
 .slider {
 	margin: 0px auto;
 	position: relative;
-	padding-bottom:50px;
-
 	display: flex;
-
-	width: 1141px;
-	height: 505px;
+	width: 90%;
+	/*height: 505px;*/
 	overflow: hidden;
 	border: 5px solid #eee;
 	box-shadow: 0px 7px 7px 2px rgba(0,0,0,0.25);
 
-}
-.slide{
-	animation: sliderAnimate 30s infinie easy;
-	position: relative;
 }
 
 
@@ -381,7 +386,6 @@ body{
 	position: absolute;
 	bottom: 0px;
 	left: 50%;
-
 	transform: translate(-50%);
 	display: flex;
 }
@@ -410,15 +414,16 @@ input[name="r"]{
 .slides{
 	
 	display: flex;
+	justify-content: flex-start;
 }
 
 .slide{
-	width: 25%;
+	animation: sliderAnimate 30s infinie easy;
 	transition: all .6s ease;
+	
 }
 
 .slide img{
-	
 }
 
 #r1:checked ~ .s1{
