--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
 /* Первая шапка */
 body{
-	background-color: #aaa;
+	background-color: #fff;
 }
 
 .header {
