--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -1,5 +1,6 @@
 .cart{
 
+    background-color: #F1FFF2;
     box-shadow: 0px 5px 5px 1px rgba(0,0,0,0.25);
 
     position: relative;
@@ -10,7 +11,8 @@
 
     width: 250px;
     height: 340px;
-    border: 1px solid #000000;
+    /*border: 3px solid #5feb6c;*/
+    border-radius: 20px;
     margin: 30px;
     float: left;
     text-align: center;
@@ -23,10 +25,12 @@
     text-transform: uppercase;
 }
 .cart img{
-    width: 80%;
+    width: 90%;
     margin: 30px 0;
 }
-
+.name {
+    font-size: 24px;
+}
 .cost{
 
     position: absolute;
@@ -42,7 +46,11 @@
     justify-content: center;
 
 }
+
 .cart button{
+    border-radius: 10px;
+    box-shadow: 0px 1px 4px 1px rgba(0,0,0,0.25);
+
     background-color: #5feb6c;
     margin: 10px;
     font-family: Roboto, serif;
@@ -53,12 +61,138 @@
     padding: 5px 10px;
 }
 
+.liked{
+    position: relative;
+    width: 30px;
+    height: 30px;
+}
+.liked img{
+    position: absolute;
+    bottom: -94.5%;
+    right: 6%;
+
+}
+
 .goods-out{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    padding: 0 30px;
+    border-top: 1px solid #5feb6c;
+    border-bottom: 1px solid #5feb6c;
 }
 .goods-out:after{
     content: "";
     display: block;
     clear: both;
 }
+
+.add-to-cart{
+    cursor: pointer;
+}
+
+.add-to-cart:hover{
+    background-color: deepskyblue;
+}
+
+.add-to-cart:active{
+    background-color: red;
+}
+
+.main-cart img{
+    max-width: 300px;
+}
+
+/*----cart----*/
+
+.content-cart{
+    margin: 10px auto;
+}
+.content-cart h2 {
+    font-size: 30px;
+    font-family: Roboto, serif;
+    font-weight: 600;
+    color: #111111;
+    text-transform: uppercase;
+    padding: 40px 20px;
+}
+
+.basket-cart{
+    position: relative;
+    background-color: #F1FFF2;
+    box-shadow: 0 5px 5px 1px rgba(0,0,0,0.25);
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    width: 95%;
+    height: 300px;
+    border-radius: 20px;
+    margin: 10px 30px;
+    padding: 30px;
+    float: left;
+    text-align: center;
+
+    font-family: Roboto, serif;
+    font-size: 16px;
+    font-weight: 100;
+    color: #000000;
+    text-transform: uppercase;
+}
+.delete-goods{
+    font-family: Roboto, serif;
+    font-size: 20px;
+
+    align-self: flex-start;
+    border-radius: 10px;
+    border: 1px solid #111111;
+    width: 30px;
+    height: 30px;
+    background-color: #5feb6c;
+}
+.basket-cart__name{
+    margin: 0 20px;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.basket-cart__img{
+    margin: 0 30px;
+    max-height: 90%;
+    width: auto;
+}
+
+.button_reright{
+    font-family: Roboto, serif;
+    font-size: 20px;
+
+    margin: 5px;
+    border-radius: 10px;
+    border: 1px solid #000;
+    width: 30px;
+    height: 30px;
+    background-color: #ffffff;
+}
+
+.price-cart{
+
+    font-size: 30px;
+    border-bottom: 2px solid #5feb6c;
+    padding: 5px 0;
+
+    position: absolute;
+    right: 2%;
+}
+
+
+@media screen and (max-width: 880px) {
+    .basket-cart{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .basket-cart__img{
+        height: auto;
+    }
+}
+
+/*-------------*/
