--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -102,6 +102,13 @@
 
 /*----cart----*/
 
+.main{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 .content-cart{
     margin: 10px auto;
 }
@@ -195,4 +202,148 @@
     }
 }
 
+
+/*-------popup----------*/
+
+
+
+
+.popup{
+    z-index: 9999;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.8);
+    top: 0;
+    left: 0;
+
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.popup-area{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+.popup-body{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+
+.popup-content{
+    border-radius: 30px;
+    box-shadow: 0 5px 10px #000;
+
+    min-width: 30vw;
+    min-height: 40vh;
+    position: relative;
+
+    background-color: #5feb6c;
+    color: #111111;
+    max-width: 800px;
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup-close{
+    padding: 10px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: #000;
+    text-decoration: none;
+
+}
+
+.email-field__text {
+    text-align: center;
+    font-family: Roboto, serif;
+    font-size: 20px;
+    margin: 10px auto;
+    padding: 20px 0;
+}
+
+.email-button{
+
+    font-family: Roboto, serif;
+    font-size: 20px;
+
+    box-shadow: 0 5px 10px #000;
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    bottom: 35px;
+    left: 0;
+
+    transition: all .3s;
+}
+
+.email-button:hover{
+    box-shadow: 0 0 0 0;
+    background-color: rgba(255,244,0, .9);
+}
+
+.email-field__input{
+    font-family: Roboto, serif;
+    font-size: 20px;
+
+    margin: 10px 0;
+    height: 30px;
+    width: 100%;
+
+    border-radius: 10px;
+}
+
+.order{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+
+    margin: 20px 0;
+}
+
+.popup__link{
+    box-shadow: 0 5px 10px #000;
+    border-radius: 30px;
+    background-color: #5feb6c;
+    color: #000;
+
+    font-family: Roboto, serif;
+    font-size: 60px;
+    width: 100%;
+
+    padding: 10px 0;
+    margin: 10px 0 30px 0;
+
+
+    align-self: center;
+    text-align: center;
+
+    transition: all .3s;
+
+}
+
+.popup__link:hover{
+    box-shadow: 0 0 0 0;
+    background-color: #96ff58;
+}
+
+/*----------------------*/
 /*-------------*/
