--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -31,7 +31,7 @@ body{
     font-size: 16px;
 }
 
-.admin-panel button{
+.add-to-db{
     background-color: #5feb6c;
     color: #000000;
     box-shadow: -3px 5px 5px #000000;
@@ -39,7 +39,7 @@ body{
 
 }
 
-.admin-panel button:hover{
+.add-to-db:hover{
     box-shadow: 0 0 0 #000000;
     border: 2px solid yellow;
 
@@ -197,4 +197,13 @@ body{
 
 .authorization:hover{
     background-color: #5feb6c;
+}
+
+.good-delete{
+    background-color: #ffa391;
+    transition: all .6s;
+}
+
+.good-delete:hover {
+    background-color: red;
 }
